syntax = "proto3";

import "dev/restate/ext.proto";
import "google/protobuf/empty.proto";
import "gigachad/v1/reminder.proto";

package gigachad.v1;

service ScheduleService {

  option (dev.restate.ext.service_type) = UNKEYED;

  rpc CreateSchedule(CreateScheduleRequest) returns (google.protobuf.Empty) {};
}

message CreateScheduleRequest {
  repeated Schedule schedules = 1;
  AddReminderRequest add_reminder_request = 2;
  string schedule_id = 3;
}

message Schedule {
  int32 day = 1;
  int32 second = 2;
  int32 minute = 3;
  int32 hour = 4;
};
